appointmentscheduler/force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <label>Appointment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>