appointmentscheduler/force-app/main/default/objects/Appointment__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime</label>
    <length>40</length>
    <type>Text</type>
</CustomField>