appointmentscheduler/force-app/main/default/objects/Appointment__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>Patient__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>