appointmentscheduler/force-app/main/default/objects/Appointment__c/fields/Physician_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_Name__c</fullName>
    <formula>Physician__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Name</label>
    <type>Text</type>
</CustomField>