appointmentscheduler/force-app/main/default/objects/Appointment__c/fields/Relationship_Number__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Number__c</fullName>
    <formula>Patient__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Number</label>
    <type>Text</type>
</CustomField>