appointmentscheduler/force-app/main/default/objects/Appointment__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>StartTime</label>
    <length>40</length>
    <type>Text</type>
</CustomField>